Modified image sizes of media/award cards, corrected columns and spacing and cleaned up tab spacing

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -36,3 +36,7 @@ nav.nav-center ul li a {
 	top: 0;
 	z-index: 1000;
 }
+.cardPic {
+	min-height: 400px;
+    max-height: 400px;
+}
